<resources>
    <string name="app_name">Carster</string>
    <string name="title">Capture VIN Number</string>
    <string name="scan_hint">Align the barcode within the square</string>
    <string name="flash_off">Flash off</string>
    <string name="about">Dynamsoft Barcode Reader Mobile App Demo (Dynamsoft Barcode Reader SDK v4.2.0)\r\n© 2016 Dynamsoft All rights reserved.\r\n\r\nIntegrate Barcode Reader Functionality into your own Mobile App?\r\n</string>
    <string name="download"></string>
    <string name="linear">Linear</string>
    <string name="qrcode">QRCode</string>
    <string name="pdf417">PDF417</string>
    <string name="datamatrix">DataMatrix</string>

    <!--mycarster-->

    <!--<string name="app_name">mycarster</string>-->
    <string name="user_name">User Name</string>
    <string name="emailimage">emailImage</string>
    <string name="passwordimage">passwordImage</string>
    <string name="password">Password</string>
    <string name="loginbutton">loginButton</string>
    <string name="registerText">Don\'t have an account?  \n Please visite website or register now!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="visit_website">Visit Website</string>
    <string name="logo_image">logo image</string>
    <string name="register">Register</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="result_top_title">VIN NUMBER:\n 1GB4CF32S23XW35S</string>
    <string name="mark_image">mark image</string>
    <string name="driven_wheels">Driven Wheels</string>
    <string name="_4_2">4*2</string>
    <string name="result_for">Result For</string>
    <string name="bottom_explain">If you have interested in Carster, please contact us. \n  We are welcome always!</string>

</resources>

