<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_back"
    tools:context="com.mycarster.carster.resultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@android:color/transparent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/markImage"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="19dp"
                    android:layout_marginStart="19dp"
                    android:contentDescription="@string/mark_image"
                    app:srcCompat="@drawable/results" />

                <TextView
                    android:id="@+id/result_top_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/result_top_title"
                    android:textAlignment="center"
                    android:textColor="@color/colorResultTitle"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@android:color/white">

                <TextView
                    android:id="@+id/table_top_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/result_for"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="16sp" />
            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:background="@android:color/white">
            <ListView
                android:id="@+id/listResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </ListView>
        </RelativeLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
